    and mipsel; rename bootscreen-subst to bootvars-subst to reflect this
    somewhat more general use of this script.
  * Drop compatibility symlink to old location of the graphical mini.iso.
  * Switch ia64 to 2.6.21-2.

  [ Joey Hess ]
  * Switch to dhcp3-client-udeb.
  * Remove ugly workaround for apex filename transition, long over.

  [ Frans Pop ]
  * Disable sparc32 as it is no longer supported for Lenny.
  * Switch sparc and powerpc to 2.6.21-2.

 -- Frans Pop <fjp@debian.org>  Mon, 23 Jul 2007 12:34:32 +0200

debian-installer (20070308) unstable; urgency=low

  [ Thiemo Seufer ]
  * Add Qemu mips/mipsel images, thanks Aurelien Jarno.

  [ Sylvain Ferriol ]
  * Add keyboard usb packages in i386 root floppy and move all net packages
    to i386 net-drivers-1 floppy.

  [ Frans Pop ]
  * Switch font used for Dzongkha in g-i to ttf-tmuni.

  [ Martin Michlmayr ]
  * Provide a properly encrypted firmware image for Thecus N2100 so the
    firmware upgrade process will recognize it.  Thanks to Kurt Roeckx
    for help with OpenSSL.
  * Remove incomplete armeb support.
  * Remove obsolete arm/nslu2 config files.
  * Switch arm, mips and mipsel to 2.6.18-2.
  * Switch arm, mips and mipsel to 2.6.18-3.
  * n2100: Add support for Evesham's M-Box.
  * Put in a workaround to support building with both apex 1.4.7 and the
    new 1.4.14 which changes the name of the apex binary; closes: #409747

  [ Joey Hess ]
  * Stop using the system status file; generate a dummy status file for apt
    containing libc6 and libnewt (the only two debs udebs still depend on).
  * dhcp3-client-udeb is for some reason Standard priority, so gets included
    in monolithic image builds (and breaks the build). Exclude it from the
    monolithic images until its priority is fixed.
  * The i386 boot floppy will be too big with the 2.6.18 kernel, so drop
    usb input modules from it. USB keyboard support didn't work before
    anyway AFAICS, since usb-discover was not included.