@@ -1,21 +1,0 @@
-partition=1
-timeout=600
-message=/boot/debian.txt
-default=install
-append="ramdisk_size=9216 load_ramdisk=1 prompt_ramdisk=1 devfs=mount root=/dev/fd0"
-root=/dev/floppy/0
-read-write
-
-# Standard boot images
-image=/boot/vmlinuz-sparc32
-  label=install
-
-# Expert boots
-image=/boot/vmlinuz-sparc32
-  label=expert
-  append="priority=low"
-
-# Standard boot images
-image=/boot/vmlinuz-sparc32
-  label=rescue
-  append="rescue/enable=true"
