@@ -1,0 +1,9 @@
+MEDIA_TYPE = CD-ROM
+
+TYPE = cdrom
+
+TARGET = $(INITRD) $(KERNEL)
+EXTRANAME = $(MEDIUM)/
+
+MANIFEST-INITRD = "initrd for CDROM"
+MANIFEST-KERNEL = "kernel for CDROM"
