@@ -1,13 +1,0 @@
-MEDIA_TYPE = CD-ROM
-
-TYPE = cdrom
-
-MANIFEST-INITRD = "initrd for CDROM"
-MANIFEST-KERNEL = "kernel for CDROM"
-
-TARGET = $(INITRD) $(KERNEL)
-
-# This is a hack to avoid changing the location of the cdrom directory and
-# breaking debian-cd. FIXME
-EXTRANAME = ../cdrom/2.6/
-
