@@ -3,15 +3,13 @@ MEDIA_TYPE = CD-ROM
 TYPE = netboot
 
 TARGET = $(TEMP_BOOT) $(MINIISO)
-EXTRANAME = 2.6/
- 
+
 MANIFEST-MINIISO = "tiny bootable CD image for pure network install"
  
 .PHONY: arch_miniiso arch_boot_screens arch_boot
 arch_miniiso:
 	-rm -rf $(TEMP_CD_TREE)/*
 	install -m 644 -D $(TEMP)/initrd.gz $(TEMP_CD_TREE)/boot/initrd.gz
-	#install -m 644 -D $(TEMP)/vmlinuz*32 $(TEMP_CD_TREE)/boot/vmlinuz-sparc32
 	install -m 644 -D $(TEMP)/vmlinuz*64 $(TEMP_CD_TREE)/boot/vmlinuz-sparc64
 	install -m 644 /boot/second.b $(TEMP_CD_TREE)/boot
 	install -m 644 $(TEMP_BOOT_SCREENS)/debian.txt $(TEMP_CD_TREE)/boot
