@@ -1,9 +1,0 @@
-# floppies need root to build, so don't autobuild
-MEDIUM_SUPPORTED = netboot-2.6 #floppy-2.6
- 
-# The version of the kernel to use.
-KERNELIMAGEVERSION = $(BASEVERSION)-sparc32
- 
-TEMP_BOOT = $(TEMP)/boot-sparc32.img
- 
-
