@@ -1,43 +1,0 @@
-FLAVOUR_SUPPORTED = root boot net-drivers asian-root cyrillic-root
-MEDIA_TYPE = floppy
-FLOPPY_SIZE = 1440
-
-INITRD_FS = ext2
-
-EXTRANAME = 2.6/
-
-# XXX!
-SOME_DEST = dest/sparc32/floppy
-
-arch_root:
-	cp $(TEMP_INITRD) $(TEMP_ROOT)
-	
-# media where images may be written to (via dd).
-WRITE_MEDIA += $(FLAVOUR_SUPPORTED)
-
-.PHONY: arch_boot arch_boot_screens
-
-arch_boot:
-	gzip -9c $(TEMP)/System.map-$(KERNELIMAGEVERSION) >$(TEMP)/System.map.gz
-	install -m 644 -D $(TEMP)/vmlinuz-$(KERNELIMAGEVERSION) $(TREE)/boot/vmlinuz-sparc32
-	install -m 644 boot/sparc/silo.floppy.conf $(TREE)/boot/silo.conf
-	install -m 644 $(TEMP_BOOT_SCREENS)/debian.txt $(TREE)/boot/
-	install -m 644 /boot/fd.b $(TREE)/boot/
-	install -m 644 /boot/second.b $(TREE)/boot/
-	genromfs -d $(TREE) -f $(TEMP_BOOT) -a 512 -A 2048,/..
-	# XXX!! BenC says this is the only way to do it
-	rm -rf $(TEMP)/mount
-	mkdir -p $(TEMP)/mount
-	mount -o loop $(TEMP_BOOT) $(TEMP)/mount
-	silo -r $(TEMP)/mount -C /boot/silo.conf -i /boot/fd.b -F
-	umount $(TEMP)/mount
-	rmdir $(TEMP)/mount
-
-# Ripped with impunity from the miniiso stuff.
-arch_boot_screens:
-	-rm -f $(TEMP_BOOT_SCREENS)/*
-	mkdir -p $(TEMP_BOOT_SCREENS)
-	bootvars-subst MEDIA_TYPE "$(MEDIA_TYPE)" \
-		DEBIAN_VERSION "$(DEBIAN_VERSION)" \
-		BUILD_DATE "$(BUILD_DATE)" \
-		< boot/sparc/debian.txt > $(TEMP_BOOT_SCREENS)/debian.txt
