@@ -1,14 +1,0 @@
-DISK_LABEL = "sparc32 boot floppy"
-# We only need the kernel. The rest is on floppy #2
-TEMP_INITRD = 
-TARGET = $(BOOT)
-
-MANIFEST-BOOT = "boot floppy for network or CD installs"
-
-# XXX: pkg-lists/ is still sorted by TYPE instead of a dir hierarchy.
-TYPE = bootfloppy
-
-# Release info not needed on boot floppy
-OMIT_RELEASE_INFO=1
-
-EXTRAUDEBS=
