@@ -1,13 +1,0 @@
-DISK_LABEL = "Network drivers floppy"
-
-TARGET = $(EXTRA)
-
-EXTRANAME = 2.6/net-drivers
-
-IMAGE_SIZE = $(FLOPPY_SIZE)
-
-MANIFEST-EXTRA = "IPv6, PPP, and PLIP drivers for sparc32"
-
-# HACK Alert: pkg-lists/ is still sorted by TYPE instead of a dir hierarchy.
-TYPE=net_drivers
-DRIVER_FOR=floppy
