@@ -1,11 +1,0 @@
-DISK_LABEL = "root floppy for sparc32"
-TARGET = $(ROOT)
-MANIFEST-ROOT = "second floppy for network or CD installs"
-
-# Drop all languages from the floppy to save space. If you need a localised
-# floppy, modify the list below, adding your language(s) in addition to en.
-# for example: DROP_LANG = '(?!en|es|pt_BR)'
-DROP_LANG = '(?!en)'
-
-# HACK Alert: pkg-lists/ is still sorted by TYPE instead of a dir hierarchy.
-TYPE=floppy
