@@ -1,7 +1,0 @@
-MEDIUM_SUPPORTED = netboot-2.6
-
-# The version of the kernel to use.
-KERNELIMAGEVERSION = $(BASEVERSION)-sparc64
- 
-TEMP_BOOT = $(TEMP)/boot-sparc64.img
-
