@@ -1,13 +1,0 @@
-MEDIA_TYPE = netboot image
- 
-MANIFEST-BOOT = "tftp boot image for sparc64"
-
-EXTRANAME = netboot/2.6/
-
-TARGET = $(BOOT)
-
-TYPE = netboot
-.PHONY: arch_boot
-arch_boot:
-	gzip -c $(TEMP)/System.map-$(KERNELIMAGEVERSION) >$(TEMP)/System.map.gz
-	tftpboot.sh $(TEMP_KERNEL) $(TEMP)/System.map.gz $(TEMP_INITRD) $(TEMP_BOOT)
