@@ -1,1 +1,0 @@
-# For sparc only the kernel is necessary. 
