@@ -1,15 +1,0 @@
-dhcp3-client-udeb
-nic-modules-${kernel:Version}
-# No eject button, load-floppy will DTRT and eject
-eject-udeb
-
-# net installation support
-net-retriever
-download-installer
-netcfg
-choose-mirror
-hw-detect
-ethdetect
-sparc-utils-udeb
-
-console-keymaps-at
