@@ -1,1 +1,0 @@
-ipv6-modules-${kernel:Version}
