@@ -8,5 +8,6 @@ sparc-utils-udeb
 netcfg
 
 nic-modules-${kernel:Version}
+usb-modules-${kernel:Version}
 
 console-keymaps-at
