@@ -1,2 +1,0 @@
-# Only available for sparc64, so only include if available.
-usb-modules-${kernel:Version} ?
