@@ -105,10 +105,11 @@ debian-installer (2007xxxx) UNRELEASED; urgency=low
   * Remove ugly workaround for apex filename transition, long over.
 
   [ Frans Pop ]
-  * Disable sparc32 as it is no longer supported for Lenny.
+  * Remove support for sparc32 as it is no longer supported for Lenny.
+  * Simplify build structure for sparc.
   * Switch sparc and powerpc to 2.6.21-2.
 
- -- Frans Pop <fjp@debian.org>  Mon, 23 Jul 2007 12:34:32 +0200
+ -- Frans Pop <fjp@debian.org>  Thu, 26 Jul 2007 00:20:13 +0200
 
 debian-installer (20070308) unstable; urgency=low
 
